<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item
        android:id="@+id/action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit" />
    
    <item
        android:id="@+id/action_reports"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reports"/>

    <item
        android:id="@+id/action_export_app_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export_app_data"/>
  
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
</menu>
