<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExportAppDataActivity"
    android:orientation="vertical" >
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >
       
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/selected_account" />

		<Spinner
        	android:id="@+id/account_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/accounts_array"
        	android:prompt="@string/accounts_prompt" />
	
	</LinearLayout>
	
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >
       
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/selected_category" />

		<Spinner
        	android:id="@+id/category_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/categories_array"
        	android:prompt="@string/category_prompt" />
	
	</LinearLayout>
   
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >
       
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/selected_payment_method" />

		<Spinner
        	android:id="@+id/payment_method_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/payment_methods_array"
        	android:prompt="@string/payment_method_prompt" />
	
	</LinearLayout>
	
	<CheckBox
   	    android:id="@+id/all_records_checkbox"
   	    android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:text="@string/all_records" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|bottom"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel_button_text" />

	    <Button
	        android:id="@+id/create_backup_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/create_backup_button_text" />
	</LinearLayout>

</LinearLayout>
