<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditExpenseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/$_text"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/amount_in_dollars"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="22sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/date_text" />

        <EditText
            android:id="@+id/expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_text" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/account_type" />
    
    	<Spinner
        	android:id="@+id/account_type_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/accounts_array"
        	android:prompt="@string/accounts_prompt" />
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/category_name" />
    
    	<Spinner
        	android:id="@+id/category_type_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/categories_array"
        	android:prompt="@string/category_prompt" />
    	
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/payment_type" />
    
    	<Spinner
        	android:id="@+id/payment_method_spinner"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/payment_methods_array"
        	android:prompt="@string/payment_method_prompt" />
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right" >

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_text" />

        <Button
            android:id="@+id/gallery"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_image" />

        <Button
            android:id="@+id/take_photo"
			android:layout_weight="1"           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_image" />
        
    </LinearLayout>
    
    <ImageView
        	android:id ="@+id/receipt"
        	android:layout_width = "120sp"
        	android:layout_height = "120sp" 
        	android:contentDescription="receipt"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancel_button"
            android:layout_alignParentLeft="true"
            android:text="@string/save_button_text" />
        
        <Button
            android:id="@+id/update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancel_button"
            android:layout_alignParentLeft="true"
            android:text="@string/update_button_text"
            android:visibility="invisible" />
        
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel_button_text" />
        
    </RelativeLayout>
     
</LinearLayout>