<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReportsActivity"
    android:orientation="vertical" >
    
	<Button
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/reports_by_account" />

	<Button
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/reports_by_category" />
	
	<Button
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/reports_by_payment_method" />

</LinearLayout>