<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpenseManagerMainActivity" >

	<EditText
	    android:id="@+id/full_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="85dp"
	    android:ems="10"
	    android:hint="@string/full_name_hint"
	    android:inputType="textCapWords" >

	    <requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/email_address"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/full_name"
	    android:layout_below="@+id/full_name"
	    android:ems="10"
	    android:inputType="textEmailAddress"
	    android:hint="@string/email_address_hint" />

	<Button
	    android:id="@+id/continue_button_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/full_name"
	    android:layout_centerVertical="true"
	    android:text="@string/continue_button_text" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/full_name"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="45dp"
	    android:text="@string/welcome_text"
	    android:textSize="30sp" />
    
</RelativeLayout>
