<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditExpenseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/$_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_amount_in_dollars"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/date_text" 
        	android:textStyle="bold" />

        <TextView
            android:id="@+id/show_date"
            android:layout_width="224dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_note"
            android:layout_width="224dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/account_type"
        	android:textStyle="bold" />
    
    	<TextView
    	    android:id="@+id/show_account_type"
            android:layout_width="224dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/category_name"
        	android:textStyle="bold" />
    
    	<TextView
    	    android:id="@+id/show_category_name"
            android:layout_width="224dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />
    	
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >
    	
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/payment_type"
        	android:textStyle="bold" />
    
    	<TextView
    	    android:id="@+id/show_payment_type"
            android:layout_width="224dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="left" >

        <TextView
            android:id="@+id/receipt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_text"
            android:paddingLeft="52dp"
            android:textStyle="bold" />

        <ImageView
        	android:id ="@+id/show_receipt"
        	android:layout_width = "120sp"
        	android:layout_height = "120sp" 
            android:paddingLeft="5dp"        	
        	android:contentDescription="receipt" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/delete_button_text" />
   
    </RelativeLayout>
     
</LinearLayout>